changed padding and border radius on contact form, updated stylesheet

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,11 +1,4 @@
 /*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
-/*
 INSPO COLORS FOR SITE:
 
 Mac Silver: #DFE0E2
@@ -39,9 +32,7 @@ body {
     color: #28282a;
     line-height: 20px;
     min-height: 100vh;
-    display: -ms-grid;
     display: grid;
-    -ms-grid-rows: auto 1fr auto;
     grid-template-rows: auto 1fr auto;
     /* values: header, main, footer */
     
@@ -49,7 +40,6 @@ body {
 }
 
 main {
-    display: -ms-grid;
     display: grid;
     place-items: center;
     height: auto;
@@ -66,8 +56,7 @@ main {
 
 
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 } 
 
 a {
@@ -95,8 +84,6 @@ ul {
 /* HEADER */
 
 .page-header {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     padding: 20px;
@@ -108,15 +95,11 @@ ul {
 }
 
 .page-header__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 200px;
-            flex: 0 1 200px;
+    flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    flex-grow: 1;
     text-align: right;
 }
 
@@ -141,31 +124,23 @@ ul {
     /* margin-bottom: 35%; */
     padding: 35px;
     background-color: #fff;
-    -webkit-box-shadow: 5px 10px 18px #888888;
-            box-shadow: 5px 10px 18px #888888;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    box-shadow: 5px 10px 18px #888888;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     gap: 10px;
 }
 
 .bio-info {
     text-align: center;
     background-color: #fff;
-    -webkit-box-shadow: 5px 10px 18px #888888;
-            box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #888888;
     padding: 10px;
     width: 50%;
     margin: 5% auto;
 }
 
 .project-list {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     padding: 30px;
@@ -174,93 +149,68 @@ ul {
 
 .project-list__item {
     background-color: #f8ecf8;
-    -webkit-box-shadow: 5px 10px 18px #888888;
-            box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #888888;
     padding: 10px;
 
 }
 
 .project-list__item:nth-child(2) {
-    -ms-grid-column: 2;
-    grid-column: 2;
-        grid-column-start: 2; 
-    -ms-grid-column-span: 0; 
+    grid-column-start: 2; 
     grid-column-end: 2;
     /* can be written shorthand like: grid-column 2/2 */
-    -ms-grid-row: 1;
-    grid-row: 1;
-        grid-row-start: 1;
-    -ms-grid-row-span: 2;
+    grid-row-start: 1;
     grid-row-end: 3;
     /* can be written shorthand like: grid-row 1/4 */
 }
 
 
 .contact {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     text-align: center;
 }
 
-input, textarea {
+input {
+    border: solid 2px white;
+    margin-bottom: 12px;
+    box-shadow: 5px 10px 18px #888888;
+    padding: 10px;
     border-radius: 5px;
-    border: solid 2px lightgray;
+}
+
+textarea {
+    border: solid 2px white;
+    margin-bottom: 12px;
+    box-shadow: 5px 10px 18px #888888;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 #contact-form {
     background-color: #f8ecf8;
-    -webkit-box-shadow: 5px 10px 18px #888888;
-            box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #888888;
     text-align: center;
     padding: 2em;
-    display: -ms-grid;
     display: grid;
-    gap: 8px;
+    gap: 10px;
+    /* border-radius: 10px; */
 }
 
 
 /* ANIMATIONS */
-@-webkit-keyframes city-spin {
-    from {
-        -webkit-transform: rotate(180deg);
-                transform: rotate(180deg);
-    }
-}
 @keyframes city-spin {
     from {
-        -webkit-transform: rotate(180deg);
-                transform: rotate(180deg);
+        transform: rotate(180deg);
     }
 }
 
 .one-way-sign {
-    -webkit-animation-duration: 2s;
-            animation-duration: 2s;
-    -webkit-animation-name: city-spin;
-            animation-name: city-spin;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
+    animation-duration: 2s;
+    animation-name: city-spin;
+    animation-iteration-count: infinite;
     animation-direction: alternate-reverse;
-    -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+    animation-timing-function: linear;
 }
-
-@-webkit-keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
-  }
 
 @keyframes color-change {
     0% {
@@ -275,88 +225,48 @@ input, textarea {
   }
 
   .sun {
-    -webkit-animation-duration: 10s;
-            animation-duration: 10s;
-    -webkit-animation-name: color-change;
-            animation-name: color-change;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-            animation-direction: alternate;
-    -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
-  }
-
-  @-webkit-keyframes m-move {
-    from {
-        -webkit-transform: scale(1.1, 1);
-                transform: scale(1.1, 1);
-    }
+    animation-duration: 10s;
+    animation-name: color-change;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
   }
 
   @keyframes m-move {
     from {
-        -webkit-transform: scale(1.1, 1);
-                transform: scale(1.1, 1);
+        transform: scale(1.1, 1);
     }
   }
 
   .m-miami {
-    -webkit-animation: 1s m-move infinite alternate linear;
-            animation: 1s m-move infinite alternate linear;
+    animation: 1s m-move infinite alternate linear;
   }
-
-@-webkit-keyframes boat-move {
-    from {
-        -webkit-transform: translate(50px, 0);
-                transform: translate(50px, 0);
-    }
-    to {
-        -webkit-transform: translate(-50px, 0);
-                transform: translate(-50px, 0)
-    }
-}
 
 @keyframes boat-move {
     from {
-        -webkit-transform: translate(50px, 0);
-                transform: translate(50px, 0);
+        transform: translate(50px, 0);
     }
     to {
-        -webkit-transform: translate(-50px, 0);
-                transform: translate(-50px, 0)
+        transform: translate(-50px, 0)
     }
 }
 
 .boat {
-    -webkit-animation: 15s boat-move infinite alternate linear;
-            animation: 15s boat-move infinite alternate linear;
-}
-
-
-
-@-webkit-keyframes cloud-move {
-    from {
-        -webkit-transform: scale(2, 0);
-                transform: scale(2, 0)
-    }
-  
+    animation: 15s boat-move infinite alternate linear;
 }
 
 
 
 @keyframes cloud-move {
     from {
-        -webkit-transform: scale(2, 0);
-                transform: scale(2, 0)
+        transform: scale(2, 0)
     }
   
 }
 
 
 .cloud-front {
-    -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
+    animation: 30s cloud-move infinite alternate linear;
 }
 
 
@@ -367,44 +277,24 @@ input, textarea {
 .where-lived {
     text-align: center;
     background-color: #fff;
-    -webkit-box-shadow: 5px 10px 18px #888888;
-            box-shadow: 5px 10px 18px #888888;
+    box-shadow: 5px 10px 18px #888888;
     width: 80%;
-}
-
-@-webkit-keyframes cloud-move-reverse {
-    from {
-        -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
-    }
-    to {
-        -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
-    }
-    to {
-        -webkit-transform: scale(2, 1);
-                transform: scale(2, 1);
-    }
 }
 
 @keyframes cloud-move-reverse {
     from {
-        -webkit-transform: translate(446px, 48px);
-                transform: translate(446px, 48px);
+        transform: translate(446px, 48px);
     }
     to {
-        -webkit-transform: translate(100px, 48px);
-                transform: translate(100px, 48px);
+        transform: translate(100px, 48px);
     }
     to {
-        -webkit-transform: scale(2, 1);
-                transform: scale(2, 1);
+        transform: scale(2, 1);
     }
 }
 
 .cloud-back {
-    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
+    animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 
@@ -421,13 +311,8 @@ input, textarea {
 /* FOOTER */
 .page-footer {
     clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     text-align: center;
     /* position: fixed; */
     width: 100%;
@@ -438,13 +323,8 @@ input, textarea {
 
 .contact-footer {
     clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     text-align: center;
     /* position: fixed; */
     width: 100%;
@@ -468,9 +348,8 @@ input, textarea {
     border-radius: 5px;
     /* transition-duration: 0.9s;
     transition-property: opacity; *** CAN BE WRITTEN AS: */ 
-    -webkit-transition: 0.2 opacity; 
-    -o-transition: 0.2 opacity; 
     transition: 0.2 opacity;
+    box-shadow: 5px 10px 18px #888888;
 }
 
 .message-submit-button {
@@ -485,9 +364,8 @@ input, textarea {
     border-radius: 5px;
     /* transition-duration: 0.9s;
     transition-property: opacity; *** CAN BE WRITTEN AS: */ 
-    -webkit-transition: 0.2 opacity; 
-    -o-transition: 0.2 opacity; 
     transition: 0.2 opacity;
+    box-shadow: 5px 10px 18px #888888;
 }
 
 #resume-button:hover, .resume-button:focus,
@@ -500,18 +378,14 @@ input, textarea {
 
 #resume-button:active {
     background-color: #2e8540;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    -webkit-transform: translateZ(4px);
-            transform: translateZ(4px);
+    box-shadow: none;
+    transform: translateZ(4px);
   }
 
 .message-submit-button:active {
     background-color: #2e8540;
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    -webkit-transform: translateZ(4px);
-            transform: translateZ(4px);
+    box-shadow: none;
+    transform: translateZ(4px);
   }
 
 #resume-button {
@@ -527,7 +401,6 @@ input, textarea {
 
 @media all and (max-width: 750px) {
     .project-list {
-        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     }
 
@@ -576,32 +449,3 @@ input, textarea {
 2. Build in most og CSS possible beofre adding fun flex and grid. 
 
 */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
