--- a/css/style.production.css
+++ b/css/style.production.css
@@ -278,7 +278,7 @@ textarea {
     text-align: center;
     background-color: #fff;
     box-shadow: 5px 10px 18px #888888;
-    width: 80%;
+    width: 90vw;
 }
 
 @keyframes cloud-move-reverse {
