--- a/css/styles.css
+++ b/css/styles.css
@@ -156,10 +156,12 @@ ul {
 
 .project-list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     grid-gap: 20px;
     padding: 30px;
-    margin-bottom: 10%
+    margin-bottom: 10%;
+    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+    grid-row: span 2;
 }
 
 .project-list__item {
@@ -169,14 +171,14 @@ ul {
 
 }
 
-.project-list__item:nth-child(2) {
+
+/* .project-list__item:nth-child(2) {
     grid-column-start: 2; 
     grid-column-end: 2;
-    /* can be written shorthand like: grid-column 2/2 */
     grid-row-start: 1;
     grid-row-end: 3;
-    /* can be written shorthand like: grid-row 1/4 */
-}
+
+} */
 
 
 .contact {
@@ -395,9 +397,9 @@ input, textarea {
         grid-row: auto/auto;
     }
 
-    .project-list__item:nth-child(2) {
+    /* .project-list__item:nth-child(2) {
         display: none;
-    }
+    } */
 
     .main-profile {
         text-align: var(--align-center);
