removed css span from gird, projects, added alt to svg

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ ul {
     padding: 30px;
     margin-bottom: 10%;
     grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-    grid-row: span 2;
+    /* grid-row: span 2; */
 }
 
 .project-list__item {
