--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ input, textarea {
     padding: 2em;
     display: grid;
     gap: 10px;
+    margin-top: 20px;
     /* border-radius: 10px; */
 }
 
