--- a/css/style.production.css
+++ b/css/style.production.css
@@ -141,10 +141,12 @@ ul {
 
 .project-list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     grid-gap: 20px;
     padding: 30px;
-    margin-bottom: 10%
+    margin-bottom: 10%;
+    grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
+    /* grid-row: span 2; */
 }
 
 .project-list__item {
@@ -154,14 +156,14 @@ ul {
 
 }
 
-.project-list__item:nth-child(2) {
+
+/* .project-list__item:nth-child(2) {
     grid-column-start: 2; 
     grid-column-end: 2;
-    /* can be written shorthand like: grid-column 2/2 */
     grid-row-start: 1;
     grid-row-end: 3;
-    /* can be written shorthand like: grid-row 1/4 */
-}
+
+} */
 
 
 .contact {
@@ -279,7 +281,7 @@ textarea {
     text-align: center;
     background-color: #fff;
     box-shadow: 5px 10px 18px #888888;
-    width: 90vw;
+    width: 80%;
 }
 
 @keyframes cloud-move-reverse {
@@ -414,9 +416,9 @@ textarea {
         grid-row: auto/auto;
     }
 
-    .project-list__item:nth-child(2) {
+    /* .project-list__item:nth-child(2) {
         display: none;
-    }
+    } */
 
     .main-profile {
         text-align: center;
@@ -450,3 +452,18 @@ textarea {
 2. Build in most og CSS possible beofre adding fun flex and grid. 
 
 */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
