--- a/css/style.production.css
+++ b/css/style.production.css
@@ -146,24 +146,17 @@ ul {
     padding: 30px;
     margin-bottom: 10%;
     grid-template-columns: repeat(auto-fit, minmax(25em, 1fr));
-    /* grid-row: span 2; */
 }
 
 .project-list__item {
     background-color: #f8ecf8;
     box-shadow: 5px 10px 18px #888888;
     padding: 10px;
-
 }
 
-
-/* .project-list__item:nth-child(2) {
-    grid-column-start: 2; 
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
-
-} */
+.project-list__item:nth-child(3) {
+    grid-row: span 2;
+}
 
 
 .contact {
@@ -403,7 +396,7 @@ textarea {
 /* MEDIA SIZING */
 
 @media all and (max-width: 750px) {
-    .project-list {
+    /* .project-list {
         grid-template-columns: 1fr;
     }
 
@@ -414,20 +407,12 @@ textarea {
     .project-list:last-child {
         grid-column: auto/auto;
         grid-row: auto/auto;
-    }
-
-    /* .project-list__item:nth-child(2) {
-        display: none;
     } */
 
     .main-profile {
         text-align: center;
         font-size: 12px;
     }
-
-    .profile__portrait {
-        float: none;
-    }   
     
     article {
         font-size: 16px;
