--- a/css/style.production.css
+++ b/css/style.production.css
@@ -183,6 +183,7 @@ textarea {
 
 #contact-form {
     background-color: #f8ecf8;
+    -webkit-box-shadow: var(--bx-shdw-5-10-18);
     box-shadow: 5px 10px 18px #888888;
     text-align: center;
     padding: 2em;
