trying webkit box shadow again on inputs

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ ul {
 input, textarea {
     border: solid 2px white;
     margin-bottom: 12px;
+    -webkit-box-shadow: var(--bx-shdw-5-10-18);
     box-shadow: var(--bx-shdw-5-10-18);
     padding: 10px;
     border-radius: 5px;
