--- a/css/style.production.css
+++ b/css/style.production.css
@@ -168,6 +168,7 @@ ul {
 input {
     border: solid 2px white;
     margin-bottom: 12px;
+    -webkit-box-shadow: 5px 10px 18px #888888;
     box-shadow: 5px 10px 18px #888888;
     padding: 10px;
     border-radius: 5px;
@@ -176,6 +177,7 @@ input {
 textarea {
     border: solid 2px white;
     margin-bottom: 12px;
+    -webkit-box-shadow: 5px 10px 18px #888888;
     box-shadow: 5px 10px 18px #888888;
     padding: 10px;
     border-radius: 5px;
